# ImplibGenerator

./: .gitmodules  CMakeLists.txt
CoffGen/: CMakeLists.txt  CoffGen.vcxproj  README.md  coffImpl.cpp  coffInterfaces.h  cofffactory.h  test_coffgen.cpp
ImpGen/: CMakeLists.txt  ImpFactory.h  ImpGen.vcxproj  ImpInterfaces.h  README.md  impImpl.cpp  test_impgen.cpp
ImpLibFix/: CMakeLists.txt  ImpLibFix.cpp  ImpLibFix.h  ImpLibFix.vcxproj  test_implibfix.cpp
LibGen/: CMakeLists.txt  LibFactory.h  LibGen.vcxproj  LibImpl.cpp  LibInterfaces.h  README.md  test_libgen.cpp
LibGenHelper/: CMakeLists.txt  LibGenHelper.vcxproj  LibGenHelperFactory.h  LibGenHelperImpl.cpp  LibGenHelperInterfaces.h  README.md
MakeImpLib/: CMakeLists.txt  MakeImpLib.vcxproj  README.md  main.cpp
dll2def/: CMakeLists.txt  dll2def.c  dll2def.cpp
dumpsyms/: CMakeLists.txt  dumpsyms.cpp  dumpsyms.py
mkimplib/: CMakeLists.txt
